--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@fastify/cors": "^8.3.0",
     "@prisma/client": "^5.2.0",
-    "fastify": "^4.22.2"
+    "fastify": "^4.22.2",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
